introduce new design

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,34 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
+
+    <meta name="description" content="フリーランスweb開発者三橋拓人のポートフォリオサイトです。
+    web開発・webデザイン・webスクレイピング等お仕事の依頼は当サイトからお願いします。
+    制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
+    保有資格 証券アナリスト FP
+    職歴 株式会社whatzmoney 株式会社MICIN">
+    <meta name="keywords" content="三橋拓人", "ミツハシタクト", "エンジニア", "デザイン", "プログラマー", "ブロガー", "漫画", "web作成", "UIデザイン", "グラフィックデザイン" ,"証券アナリスト",,>
+    <meta name=”robots” content=”all”>
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@picos_tackt" />
+    <meta property="og:url" content="https://tackt-m.com" />
+    <meta property="og:title" content="Tackt Mitsuhashi" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122676076-1');
+    </script>
 
     <title>Tackt Mitsuhashi</title>
   </head>
