Add react slick

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
-    <meta name="description" content="フリーランスweb開発者三橋拓人のポートフォリオサイトです。
+    <meta name="description" content="漫画家になりたいフリーランスweb開発者三橋拓人のポートフォリオサイトです。
     web開発・webデザイン・webスクレイピング等お仕事の依頼は当サイトからお願いします。
     制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
     保有資格 証券アナリスト FP
@@ -25,6 +25,9 @@
     <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"/>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
