--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
     制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
     保有資格 証券アナリスト FP
     職歴 株式会社whatzmoney 株式会社MICIN">
-    <meta name="keywords" content="三橋拓人", "ミツハシタクト", "エンジニア", "デザイン", "プログラマー", "ブロガー", "漫画", "web作成", "UIデザイン", "グラフィックデザイン" ,"証券アナリスト",,>
+    <meta name="keywords" content="三橋拓人, ミツハシタクト, Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト">
     <meta name=”robots” content=”all”>
 
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@picos_tackt" />
     <meta property="og:url" content="https://tackt-m.com" />
-    <meta property="og:title" content="Tackt Mitsuhashi" />
+    <meta property="og:title" content="三橋拓人ポートフォリオ" />
     <meta property="og:description" content="" />
     <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
 
@@ -39,7 +39,7 @@
       gtag('config', 'UA-122676076-1');
     </script>
 
-    <title>Tackt Mitsuhashi</title>
+    <title>三橋拓人ポートフォリオ</title>
   </head>
   <body>
     <div id="root"></div>
