Delete images and Fix design

--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,22 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
-    <meta name="description" content="漫画家になりたいフリーランスweb開発者三橋拓人のポートフォリオサイトです。
-    web開発・webデザイン・webスクレイピング等お仕事の依頼は当サイトからお願いします。
+    <meta name="description" content="
+    WEB開発と漫画書いてる21歳です！とりあえずいつも何か作ってます。
+    18歳の頃から独学をし始めて、ITベンチャー企業でプログラミング技術を身につけました。
+    証券アナリスト資格二次試験合格。投資シミュレーションゲームや自動トレードシステムなど、金融系のシステムを作るのが好きです。
+    趣味で漫画・イラストやレジン・ハーバリウム製作をやってます。ショップやブログあります。
+    web開発・webデザイン・webスクレイピング等、お仕事の依頼承ります！
     制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
-    保有資格 証券アナリスト FP
-    職歴 株式会社whatzmoney 株式会社MICIN">
+    漫画家になりたいフリーランスWEB開発者三橋拓人のポートフォリオサイトです。
+    ">
     <meta name="keywords" content="三橋拓人, ミツハシタクト, Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト">
     <meta name=”robots” content=”all”>
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@picos_tackt" />
     <meta property="og:url" content="https://tackt-m.com" />
-    <meta property="og:title" content="三橋拓人ポートフォリオ" />
+    <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
     <meta property="og:description" content="" />
     <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
 
@@ -39,7 +43,7 @@
       gtag('config', 'UA-122676076-1');
     </script>
 
-    <title>三橋拓人ポートフォリオ</title>
+    <title>三橋拓人ポートフォリオサイト</title>
   </head>
   <body>
     <div id="root"></div>
