--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,12 @@
     <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
     <meta name="description" content="
-    WEB開発と漫画書いてる21歳です！とりあえずいつも何か作ってます。
+    三橋拓人のポートフォリオサイト。WEB開発と漫画書いてる21歳です！とりあえずいつも何か作ってます。
     18歳の頃から独学をし始めて、ITベンチャー企業でプログラミング技術を身につけました。
     証券アナリスト資格二次試験合格。投資シミュレーションゲームや自動トレードシステムなど、金融系のシステムを作るのが好きです。
     趣味で漫画・イラストやレジン・ハーバリウム製作をやってます。ショップやブログあります。
     web開発・webデザイン・webスクレイピング等、お仕事の依頼承ります！
     制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
-    漫画家になりたいフリーランスWEB開発者三橋拓人のポートフォリオサイトです。
     ">
     <meta name="keywords" content="三橋拓人, ミツハシタクト, Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト">
     <meta name=”robots” content=”all”>
@@ -25,13 +24,21 @@
     <meta name="twitter:site" content="@picos_tackt" />
     <meta property="og:url" content="https://tackt-m.com" />
     <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
+    <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
+    <meta property="og:description" content="
+    三橋拓人のポートフォリオサイト。WEB開発と漫画書いてる21歳です！とりあえずいつも何か作ってます。
+    18歳の頃から独学をし始めて、ITベンチャー企業でプログラミング技術を身につけました。
+    証券アナリスト資格二次試験合格。投資シミュレーションゲームや自動トレードシステムなど、金融系のシステムを作るのが好きです。
+    趣味で漫画・イラストやレジン・ハーバリウム製作をやってます。ショップやブログあります。
+    web開発・webデザイン・webスクレイピング等、お仕事の依頼承ります！
+    制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
+    " />
+    <meta property="og:image" content="%PUBLIC_URL%/images/top.png" />
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"/>
+    <!-- <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"/> -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
