--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     web開発・webデザイン・webスクレイピング等、お仕事の依頼承ります！
     制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
     ">
-    <meta name="keywords" content="三橋拓人, ミツハシタクト, Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト">
+    <meta name="keywords" content="三橋拓人, ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト">
     <meta name=”robots” content=”all”>
 
     <meta name="twitter:card" content="summary_large_image" />
