--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,10 @@
     <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
     <meta name="description" content="
-    三橋拓人のポートフォリオサイト。WEB開発と漫画書いてる21歳です！とりあえずいつも何か作ってます。
+    三橋拓人のポートフォリオサイト。WEB開発と漫画書いてる21歳です。いつも何か作ってます。
     18歳の頃から独学をし始めて、ITベンチャー企業でプログラミング技術を身につけました。
     証券アナリスト資格二次試験合格。投資シミュレーションゲームや自動トレードシステムなど、金融系のシステムを作るのが好きです。
     趣味で漫画・イラストやレジン・ハーバリウム製作をやってます。ショップやブログあります。
-    web開発・webデザイン・webスクレイピング等、お仕事の依頼承ります！
     制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
     ">
     <meta name="keywords" content="三橋拓人, ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト">
@@ -23,18 +22,18 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@picos_tackt" />
     <meta property="og:url" content="https://tackt-m.com" />
-    <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
-    <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
+    <meta property="og:title" content="takuto mitsuhashi" />
+    <meta property="og:site_name" content="takuto mitsuhashi" />
     <meta property="og:description" content="
-    三橋拓人のポートフォリオサイト。WEB開発と漫画書いてる21歳です！とりあえずいつも何か作ってます。
+    三橋拓人のポートフォリオサイト。WEB開発と漫画書いてる21歳です。いつも何か作ってます。
     18歳の頃から独学をし始めて、ITベンチャー企業でプログラミング技術を身につけました。
     証券アナリスト資格二次試験合格。投資シミュレーションゲームや自動トレードシステムなど、金融系のシステムを作るのが好きです。
     趣味で漫画・イラストやレジン・ハーバリウム製作をやってます。ショップやブログあります。
-    web開発・webデザイン・webスクレイピング等、お仕事の依頼承ります！
     制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
     " />
     <meta property="og:image" content="%PUBLIC_URL%/images/top.png" />
 
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
 
     <!-- <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/>
@@ -50,7 +49,7 @@
       gtag('config', 'UA-122676076-1');
     </script>
 
-    <title>三橋拓人ポートフォリオサイト</title>
+    <title>takuto mitsuhashi</title>
   </head>
   <body>
     <div id="root"></div>
