Create feneral list component

--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,66 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
 
-    <meta name="description" content="
-    三橋拓人のポートフォリオサイト。WEB開発と漫画書いてる21歳です。いつも何か作ってます。
-    18歳の頃から独学をし始めて、ITベンチャー企業でプログラミング技術を身につけました。
-    証券アナリスト資格二次試験合格。投資シミュレーションゲームや自動トレードシステムなど、金融系のシステムを作るのが好きです。
-    趣味で漫画・イラストやレジン・ハーバリウム製作をやってます。ショップやブログあります。
-    制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
+
+  <meta name="description" content="
+    ただの大学生。
+    ヒッチハイク中に高速道路で雨の中遭難して死にかけ、
+    怪しい雑居ビルのオフィスに迷い込んで変な契約を結びかけた上、
+    日本円を送金用のRippleに変えた途端仮想通貨バブルが弾けて一時資産を半分失い、
+    株で儲けようと機械学習の自動トレードシステムの開発を行うが一瞬でデモ口座の資産を溶かす。
+    特技は初めて行った場所でも空いている綺麗なトイレを一瞬で見つけられること。
+    18歳くらいの時からプログラミングを始め企業でプログラマーとして働きながら個人でサービス開発を行う。
+    漫画家になりたい。
     ">
-    <meta name="keywords" content="三橋拓人, ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト">
-    <meta name=”robots” content=”all”>
+  <meta name="keywords" content="三橋拓人, ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
+  <meta name=”robots” content=”all”>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@picos_tackt" />
-    <meta property="og:url" content="https://tackt-m.com" />
-    <meta property="og:title" content="takuto mitsuhashi" />
-    <meta property="og:site_name" content="takuto mitsuhashi" />
-    <meta property="og:description" content="
-    三橋拓人のポートフォリオサイト。WEB開発と漫画書いてる21歳です。いつも何か作ってます。
-    18歳の頃から独学をし始めて、ITベンチャー企業でプログラミング技術を身につけました。
-    証券アナリスト資格二次試験合格。投資シミュレーションゲームや自動トレードシステムなど、金融系のシステムを作るのが好きです。
-    趣味で漫画・イラストやレジン・ハーバリウム製作をやってます。ショップやブログあります。
-    制作実績 仮想通貨ポートフォリオサイトVCU 投資シミュレーションゲームBabelBubble
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@picos_tackt" />
+  <meta property="og:url" content="https://tackt-m.com" />
+  <meta property="og:title" content="takuto mitsuhashi" />
+  <meta property="og:site_name" content="takuto mitsuhashi" />
+  <meta property="og:description" content="
+    ただの大学生。
+    ヒッチハイク中に高速道路で雨の中遭難して死にかけ、
+    怪しい雑居ビルのオフィスに迷い込んで変な契約を結びかけた上、
+    日本円を送金用のRippleに変えた途端仮想通貨バブルが弾けて一時資産を半分失い、
+    株で儲けようと機械学習の自動トレードシステムの開発を行うが一瞬でデモ口座の資産を溶かす。
+    特技は初めて行った場所でも空いている綺麗なトイレを一瞬で見つけられること。
+    18歳くらいの時からプログラミングを始め企業でプログラマーとして働きながら個人でサービス開発を行う。
+    漫画家になりたい。
     " />
-    <meta property="og:image" content="%PUBLIC_URL%/images/top.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/images/top.png" />
 
-    <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/>
+  <!-- <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"/> -->
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      gtag('config', 'UA-122676076-1');
-    </script>
+    gtag('config', 'UA-122676076-1');
+  </script>
 
-    <title>takuto mitsuhashi</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+  <title>三橋拓人ポートフォリオサイト</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
