Introduce Githic Style

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
   <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
   <meta name="description" content="
-    ただの大学生。
-    ヒッチハイク中に高速道路で雨の中遭難して死にかけ、
-    怪しい雑居ビルのオフィスに迷い込んで変な契約を結びかけた上、
-    日本円を送金用のRippleに変えた途端仮想通貨バブルが弾けて一時資産を半分失い、
-    株で儲けようと機械学習の自動トレードシステムの開発を行うが一瞬でデモ口座の資産を溶かす。
-    特技は初めて行った場所でも空いている綺麗なトイレを一瞬で見つけられること。
-    18歳くらいの時からプログラミングを始め企業でプログラマーとして働きながら個人でサービス開発を行う。
-    漫画家になりたい。
+    こんにちは。三橋拓人と申します。このサイトは私の活動をまとめたポートフォリオサイトです。 間違えてサイトに来てしまったという方もせっかくなので流し読みしてください。
+    私はバイト代を株と仮想通貨にほぼ全額投入する大学生投資家です。 証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
+    「投資に過剰な嫌悪感を示す人」を撲滅するためのサービスを開発する
+    このマニュフェストを掲げた理由は、投資やお金を怪しいと決めつけて全く聞く耳を持たない人が多いからです。
+    投資は、商品の性質を理解して、無謀な投機を行わなければ、資産を守る強力な手段になります。
+    僕はこのように「本当はいい奴」である投資が一方的に「悪い奴」のように扱われていることに我慢できません。
+    たしかに中には怪しい話もあります。しかし全てが悪ではありません。犯罪者が1人でもいる国の国民は全員が犯罪者なのでしょうか？
+    僕はこのような投資やお金の「悪いイメージ」を変えていきたいと思っています。学生であるからこそ、エンジニアであるからこそできる事があると思い、このようなマニュフェストを掲げました。
     ">
   <meta name="keywords" content="三橋拓人, ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
   <meta name=”robots” content=”all”>
@@ -26,25 +26,22 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@picos_tackt" />
   <meta property="og:url" content="https://tackt-m.com" />
-  <meta property="og:title" content="takuto mitsuhashi" />
-  <meta property="og:site_name" content="takuto mitsuhashi" />
+  <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
+  <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
   <meta property="og:description" content="
-    ただの大学生。
-    ヒッチハイク中に高速道路で雨の中遭難して死にかけ、
-    怪しい雑居ビルのオフィスに迷い込んで変な契約を結びかけた上、
-    日本円を送金用のRippleに変えた途端仮想通貨バブルが弾けて一時資産を半分失い、
-    株で儲けようと機械学習の自動トレードシステムの開発を行うが一瞬でデモ口座の資産を溶かす。
-    特技は初めて行った場所でも空いている綺麗なトイレを一瞬で見つけられること。
-    18歳くらいの時からプログラミングを始め企業でプログラマーとして働きながら個人でサービス開発を行う。
-    漫画家になりたい。
+    こんにちは。三橋拓人と申します。このサイトは私の活動をまとめたポートフォリオサイトです。 間違えてサイトに来てしまったという方もせっかくなので流し読みしてください。
+    私はバイト代を株と仮想通貨にほぼ全額投入する大学生投資家です。 証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
+    「投資に過剰な嫌悪感を示す人」を撲滅するためのサービスを開発する
+    このマニュフェストを掲げた理由は、投資やお金を怪しいと決めつけて全く聞く耳を持たない人が多いからです。
+    投資は、商品の性質を理解して、無謀な投機を行わなければ、資産を守る強力な手段になります。
+    僕はこのように「本当はいい奴」である投資が一方的に「悪い奴」のように扱われていることに我慢できません。
+    たしかに中には怪しい話もあります。しかし全てが悪ではありません。犯罪者が1人でもいる国の国民は全員が犯罪者なのでしょうか？
+    僕はこのような投資やお金の「悪いイメージ」を変えていきたいと思っています。学生であるからこそ、エンジニアであるからこそできる事があると思い、このようなマニュフェストを掲げました。
     " />
   <meta property="og:image" content="%PUBLIC_URL%/images/top.png" />
 
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
-
-  <!-- <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"/> -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
