--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@picos_tackt" />
   <meta property="og:url" content="https://tackt-m.com" />
-  <meta property="og:title" content="三橋拓人＠バイト代全額投資家　ポートフォリオサイト" />
-  <meta property="og:site_name" content="三橋拓人＠バイト代全額投資家　ポートフォリオサイト" />
+  <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
+  <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
   <meta property="og:description" content="
     こんにちは。三橋拓人と申します。このサイトは私の活動をまとめたポートフォリオサイトです。 間違えてサイトに来てしまったという方もせっかくなので流し読みしてください。
-    私はバイト代を株と仮想通貨にほぼ全額投入する大学生投資家です。 証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
+    バイト代を投資にほぼ全額投入する大学生投資家です。 証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
     「投資に過剰な嫌悪感を示す人」を撲滅するためのサービスを開発する
     このマニュフェストを掲げた理由は、投資やお金を怪しいと決めつけて全く聞く耳を持たない人が多いからです。
     投資は、商品の性質を理解して、無謀な投機を行わなければ、資産を守る強力な手段になります。
@@ -53,7 +53,7 @@
     gtag('config', 'UA-122676076-1');
   </script>
 
-  <title>三橋拓人＠バイト代全額投資家　ポートフォリオサイト</title>
+  <title>三橋拓人ポートフォリオサイト</title>
 </head>
 
 <body>
