--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     gtag('config', 'UA-122676076-1');
   </script>
 
-  <title>三橋拓人ポートフォリオサイト</title>
+  <title>三橋拓人 official website</title>
 </head>
 
 <body>
