--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,8 @@
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
 
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
   <script>
