Apply new design

--- a/public/index.html
+++ b/public/index.html
@@ -11,26 +11,28 @@
   <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
   <meta name="description" content="
-    こんにちは。三橋拓人と申します。このサイトは私の活動をまとめたポートフォリオサイトです。 間違えてサイトに来てしまったという方もせっかくなので流し読みしてください。
-    私はバイト代を株と仮想通貨にほぼ全額投入する大学生投資家です。 証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
-    「投資に過剰な嫌悪感を示す人」を撲滅するためのサービスを開発する
+    こんにちは。三橋拓人と申します。 
+    「今風のそれっぽいサイトを作りたい！」という依頼は私におまかせください。 三橋拓人は必ず「それっぽいもの」が作れるWebエンジニアです。 当サイトは私の様々な分野における実績や作品が掲載されたポートフォリオサイトです。
+    証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
+  「投資に過剰な嫌悪感を示す人」を撲滅するためのサービスを開発する
     このマニュフェストを掲げた理由は、投資やお金を怪しいと決めつけて全く聞く耳を持たない人が多いからです。
     投資は、商品の性質を理解して、無謀な投機を行わなければ、資産を守る強力な手段になります。
     僕はこのように「本当はいい奴」である投資が一方的に「悪い奴」のように扱われていることに我慢できません。
     たしかに中には怪しい話もあります。しかし全てが悪ではありません。犯罪者が1人でもいる国の国民は全員が犯罪者なのでしょうか？
     僕はこのような投資やお金の「悪いイメージ」を変えていきたいと思っています。学生であるからこそ、エンジニアであるからこそできる事があると思い、このようなマニュフェストを掲げました。
     ">
-  <meta name="keywords" content="三橋拓人, ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
+  <meta name="keywords" content="三橋拓人, 三橋 拓人,  ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
   <meta name=”robots” content=”all”>
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@picos_tackt" />
   <meta property="og:url" content="https://tackt-m.com" />
-  <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
-  <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
+  <meta property="og:title" content="三橋拓人 official website" />
+  <meta property="og:site_name" content="三橋拓人 official website" />
   <meta property="og:description" content="
-    こんにちは。三橋拓人と申します。このサイトは私の活動をまとめたポートフォリオサイトです。 間違えてサイトに来てしまったという方もせっかくなので流し読みしてください。
-    バイト代を投資にほぼ全額投入する大学生投資家です。 証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
+    こんにちは。三橋拓人と申します。 
+    「今風のそれっぽいサイトを作りたい！」という依頼は私におまかせください。 三橋拓人は必ず「それっぽいもの」が作れるWebエンジニアです。 当サイトは私の様々な分野における実績や作品が掲載されたポートフォリオサイトです。
+    証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
     「投資に過剰な嫌悪感を示す人」を撲滅するためのサービスを開発する
     このマニュフェストを掲げた理由は、投資やお金を怪しいと決めつけて全く聞く耳を持たない人が多いからです。
     投資は、商品の性質を理解して、無謀な投機を行わなければ、資産を守る強力な手段になります。
@@ -38,7 +40,7 @@
     たしかに中には怪しい話もあります。しかし全てが悪ではありません。犯罪者が1人でもいる国の国民は全員が犯罪者なのでしょうか？
     僕はこのような投資やお金の「悪いイメージ」を変えていきたいと思っています。学生であるからこそ、エンジニアであるからこそできる事があると思い、このようなマニュフェストを掲げました。
     " />
-  <meta property="og:image" content="%PUBLIC_URL%/images/top.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
