--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
 
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <script src="%PUBLIC_URL%/animation.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
