--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,10 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <canvas class="background"></canvas>
+    <script src="path/to/particles.min.js"></script>
+  </div>
 </body>
 
 </html>
