--- a/public/index.html
+++ b/public/index.html
@@ -11,34 +11,20 @@
   <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
   <meta name="description" content="
-    こんにちは。三橋拓人と申します。 
-    「今風のそれっぽいサイトを作りたい！」という依頼は私におまかせください。 三橋拓人は必ず「それっぽいもの」が作れるWebエンジニアです。 当サイトは私の様々な分野における実績や作品が掲載されたポートフォリオサイトです。
-    証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
-  「投資に過剰な嫌悪感を示す人」を撲滅するためのサービスを開発する
-    このマニュフェストを掲げた理由は、投資やお金を怪しいと決めつけて全く聞く耳を持たない人が多いからです。
-    投資は、商品の性質を理解して、無謀な投機を行わなければ、資産を守る強力な手段になります。
-    僕はこのように「本当はいい奴」である投資が一方的に「悪い奴」のように扱われていることに我慢できません。
-    たしかに中には怪しい話もあります。しかし全てが悪ではありません。犯罪者が1人でもいる国の国民は全員が犯罪者なのでしょうか？
-    僕はこのような投資やお金の「悪いイメージ」を変えていきたいと思っています。学生であるからこそ、エンジニアであるからこそできる事があると思い、このようなマニュフェストを掲げました。
-    ">
+  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。Web開発・ブログ・投資・デザイン・イラストに精通しています。
+  証券アナリスト(CCMA)資格を保有。
+  ">
   <meta name="keywords" content="三橋拓人, 三橋 拓人,  ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
   <meta name=”robots” content=”all”>
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@picos_tackt" />
   <meta property="og:url" content="https://tackt-m.com" />
-  <meta property="og:title" content="三橋拓人 official website" />
-  <meta property="og:site_name" content="三橋拓人 official website" />
+  <meta property="og:title" content="Takuto Mitsuhashi Portfolio" />
+  <meta property="og:site_name" content="Takuto Mitsuhashi Portfolio" />
   <meta property="og:description" content="
-    こんにちは。三橋拓人と申します。 
-    「今風のそれっぽいサイトを作りたい！」という依頼は私におまかせください。 三橋拓人は必ず「それっぽいもの」が作れるWebエンジニアです。 当サイトは私の様々な分野における実績や作品が掲載されたポートフォリオサイトです。
-    証券アナリスト(CCMA)というそこそこ金融の知識がある人が取れる資格を持っています。
-    「投資に過剰な嫌悪感を示す人」を撲滅するためのサービスを開発する
-    このマニュフェストを掲げた理由は、投資やお金を怪しいと決めつけて全く聞く耳を持たない人が多いからです。
-    投資は、商品の性質を理解して、無謀な投機を行わなければ、資産を守る強力な手段になります。
-    僕はこのように「本当はいい奴」である投資が一方的に「悪い奴」のように扱われていることに我慢できません。
-    たしかに中には怪しい話もあります。しかし全てが悪ではありません。犯罪者が1人でもいる国の国民は全員が犯罪者なのでしょうか？
-    僕はこのような投資やお金の「悪いイメージ」を変えていきたいと思っています。学生であるからこそ、エンジニアであるからこそできる事があると思い、このようなマニュフェストを掲げました。
+    三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。Web開発・ブログ・投資・デザイン・イラストに精通しています。
+    証券アナリスト(CCMA)資格を保有。
     " />
   <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
@@ -58,7 +44,7 @@
     gtag('config', 'UA-122676076-1');
   </script>
 
-  <title>三橋拓人 official website</title>
+  <title>Takuto Mitsuhashi Portfolio</title>
 </head>
 
 <body>
