Remove some packages

--- a/public/index.html
+++ b/public/index.html
@@ -11,20 +11,18 @@
   <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
   <meta name="description" content="
-  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。Web開発・ブログ・投資・デザイン・イラストに精通しています。
-  証券アナリスト(CCMA)資格を保有。
+  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。
   ">
-  <meta name="keywords" content="三橋拓人, 三橋 拓人,  ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
+  <meta name="keywords" content="三橋拓人, 三橋 拓人, ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
   <meta name=”robots” content=”all”>
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@picos_tackt" />
   <meta property="og:url" content="https://tackt-m.com" />
-  <meta property="og:title" content="Takuto Mitsuhashi Portfolio" />
-  <meta property="og:site_name" content="Takuto Mitsuhashi Portfolio" />
+  <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
+  <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
   <meta property="og:description" content="
-    三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。Web開発・ブログ・投資・デザイン・イラストに精通しています。
-    証券アナリスト(CCMA)資格を保有。
+  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。
     " />
   <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
@@ -32,7 +30,6 @@
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
 
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  <script src="%PUBLIC_URL%/animation.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
@@ -44,13 +41,11 @@
     gtag('config', 'UA-122676076-1');
   </script>
 
-  <title>Takuto Mitsuhashi Portfolio</title>
+  <title>三橋拓人ポートフォリオサイト</title>
 </head>
 
 <body>
   <div id="root">
-    <canvas class="background"></canvas>
-    <script src="path/to/particles.min.js"></script>
   </div>
 </body>
 
