--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway|Montserrat|Open+Sans|Playfair+Display+SC|Prata|Rufina|Vidaloka" rel="stylesheet">
 
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
