--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
 
   <meta name="description" content="
   三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。
+  フリーランスWebエンジニア。Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。 
+  Freelance Web Engineer. Please leave the consultation and site production related to the web. I cope with all the worries of website production.
   ">
-  <meta name="keywords" content="三橋拓人, 三橋 拓人, ミツハシタクト, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
+  <meta name="keywords" content="三橋拓人, 三橋 拓人, ミツハシタクト, フリーランスWebエンジニア, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
   <meta name=”robots” content=”all”>
 
   <meta name="twitter:card" content="summary_large_image" />
@@ -23,7 +25,9 @@
   <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
   <meta property="og:description" content="
   三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。
-    " />
+  フリーランスWebエンジニア。Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。 
+  Freelance Web Engineer. Please leave the consultation and site production related to the web. I cope with all the worries of website production.
+  " />
   <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
   <link rel="stylesheet" href="css/main.css">
@@ -41,7 +45,7 @@
     gtag('config', 'UA-122676076-1');
   </script>
 
-  <title>三橋拓人ポートフォリオサイト</title>
+  <title>三橋拓人ポートフォリオサイト フリーランスWebエンジニア</title>
 </head>
 
 <body>
