--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     gtag('config', 'UA-122676076-1');
   </script>
 
-  <title>三橋拓人ポートフォリオサイト フリーランスWebエンジニア</title>
+  <title>三橋拓人ポートフォリオサイト</title>
 </head>
 
 <body>
