--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   " />
   <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
-  <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway|Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
