--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
   <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
