Fix design and contents

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,8 @@
   <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
   <meta name="description" content="
-  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。
-  フリーランスWebエンジニア。Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。 
-  Freelance Web Engineer. Please leave the consultation and site production related to the web. I cope with all the worries of website production.
+  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。個人でWebサービスやアプリを作ってます。
+  Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。 
   ">
   <meta name="keywords" content="三橋拓人, 三橋 拓人, ミツハシタクト, フリーランスWebエンジニア, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
   <meta name=”robots” content=”all”>
@@ -24,9 +23,8 @@
   <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
   <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
   <meta property="og:description" content="
-  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。
-  フリーランスWebエンジニア。Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。 
-  Freelance Web Engineer. Please leave the consultation and site production related to the web. I cope with all the worries of website production.
+  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。個人でWebサービスやアプリを作ってます。
+  Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。 
   " />
   <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
