--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
-  <meta name="description" content="
-  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。個人でWebサービスやアプリを作ってます。
-  Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。 
-  ">
+  <meta name="description" content="三橋拓人のポートフォリオサイトです。個人でWebサービスやスマホアプリを作ってます。アイコンも作っています。">
   <meta name="keywords" content="三橋拓人, 三橋 拓人, ミツハシタクト, フリーランスWebエンジニア, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
   <meta name=”robots” content=”all”>
 
@@ -22,16 +19,10 @@
   <meta property="og:url" content="https://tackt-m.com" />
   <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
   <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
-  <meta property="og:description" content="
-  三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。個人でWebサービスやアプリを作ってます。
-  Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。 
-  " />
+  <meta property="og:description" content="三橋拓人のポートフォリオサイトです。個人でWebサービスやスマホアプリを作ってます。アイコンも作っています。" />
   <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
