--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
 
-  <meta name="description" content="三橋拓人のポートフォリオサイトです。個人でWebサービスやスマホアプリを作ってます。アイコンも作っています。">
+  <meta name="description" content="三橋拓人のポートフォリオサイトです。Webサービスやアプリを作ってます。">
   <meta name="keywords" content="三橋拓人, 三橋 拓人, ミツハシタクト, フリーランスWebエンジニア, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
   <meta name=”robots” content=”all”>
 
@@ -19,7 +19,7 @@
   <meta property="og:url" content="https://tackt-m.com" />
   <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
   <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
-  <meta property="og:description" content="三橋拓人のポートフォリオサイトです。個人でWebサービスやスマホアプリを作ってます。アイコンも作っています。" />
+  <meta property="og:description" content="三橋拓人のポートフォリオサイトです。Webサービスやアプリを作ってます。" />
   <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
 
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
