Create Jumbotron component

--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      size="152x152"
+      href="%PUBLIC_URL%/favicon.ico"
+    />
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/favicon.ico">
+    <meta
+      name="description"
+      content="三橋拓人のポートフォリオサイトです。Webサービスやアプリを作ってます。"
+    />
+    <meta
+      name="keywords"
+      content="三橋拓人, 三橋 拓人, ミツハシタクト, フリーランスWebエンジニア, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生"
+    />
+    <meta name="”robots”" content="”all”" />
 
-  <meta name="description" content="三橋拓人のポートフォリオサイトです。Webサービスやアプリを作ってます。">
-  <meta name="keywords" content="三橋拓人, 三橋 拓人, ミツハシタクト, フリーランスWebエンジニア, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生">
-  <meta name=”robots” content=”all”>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@picos_tackt" />
+    <meta property="og:url" content="https://tackt-m.com" />
+    <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
+    <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
+    <meta
+      property="og:description"
+      content="三橋拓人のポートフォリオサイトです。Webサービスやアプリを作ってます。"
+    />
+    <meta
+      property="og:image"
+      content="https://tackt-m.com/images/background.png"
+    />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@picos_tackt" />
-  <meta property="og:url" content="https://tackt-m.com" />
-  <meta property="og:title" content="三橋拓人ポートフォリオサイト" />
-  <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
-  <meta property="og:description" content="三橋拓人のポートフォリオサイトです。Webサービスやアプリを作ってます。" />
-  <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
+      rel="stylesheet"
+    />
 
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag("js", new Date())
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122676076-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+      gtag("config", "UA-122676076-1")
+    </script>
 
-    gtag('config', 'UA-122676076-1');
-  </script>
+    <title>三橋拓人ポートフォリオサイト</title>
+  </head>
 
-  <title>三橋拓人ポートフォリオサイト</title>
-</head>
-
-<body>
-  <div id="root">
-  </div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
