--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
 
     <meta
       name="description"
-      content="三橋拓人のポートフォリオサイトです。Webサービスやアプリを作ってます。"
+      content="三橋拓人のポートフォリオサイトです。個人開発等のポートフォリオを掲載しております。"
     />
     <meta
       name="keywords"
-      content="三橋拓人, 三橋 拓人, ミツハシタクト, フリーランスWebエンジニア, みつはしたくと, takuto mitsuhashi , Takuto, Tackt, Tackt Mitsuhashi, エンジニア, デザイン, プログラマー, ブロガー, 漫画, web作成, UIデザイン, グラフィックデザイン ,証券アナリスト, 明治, 大学生"
+      content="三橋拓人, 三橋 拓人, ミツハシタクト"
     />
     <meta name="”robots”" content="”all”" />
 
@@ -33,17 +33,12 @@
     <meta property="og:site_name" content="三橋拓人ポートフォリオサイト" />
     <meta
       property="og:description"
-      content="三橋拓人のポートフォリオサイトです。Webサービスやアプリを作ってます。"
-    />
-    <meta
-      property="og:image"
-      content="https://tackt-m.com/images/background.png"
+      content="三橋拓人のポートフォリオサイトです。個人開発等のポートフォリオを掲載しております。"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
